<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/engines_title">

        <Preference
            android:key="pref_static_field_key"
            android:selectable="false"
            android:persistent="false"
            android:title=""
            android:summary="@string/privacy_warning"/>
        <Preference
            android:key="pref_static_field_key2"
            android:selectable="false"
            android:persistent="false"
            android:title=""
            android:summary="@string/must_select_engine"/>
        <CheckBoxPreference
            android:key="yandex"
            android:title="Yandex"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="bing"
            android:title="Bing"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="google"
            android:title="Google"
            android:summary="@string/summary_google"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_header">

        <Preference
            app:fragment="com.hermesjunior.imagesearcher.ui.settings.LicensesFragment"
            app:key="licenses"
            app:summary="@string/licenses_summary"
            app:title="@string/licenses_title" />

        <Preference
            app:key="opensource"
            app:summary="@string/opensource_summary"
            app:title="@string/opensource_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/OHermesJunior/imagesearcher" />
        </Preference>

        <Preference
            app:key="version"
            app:summary="@string/version_summary"
            app:title="@string/app_name" />

    </PreferenceCategory>
</PreferenceScreen>
